added cv, projects, and contact pages. Added content to home page.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Ramirez: Personal site and portfolio</title>
+    <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
     <h1>Daniel Ramirez</h1>
     <p>I am a fourth year probability and statistics major with a minor in data science.
          I like to play tennis and to study math and data science.
     </p>
+    
+    <img src="images/peppa_pink_small.jpg"
+            alt = "My dog Peppa with cherry blossoms in the background"/>
+    <p>This is one of my favorite pictures of my dog.</p>
+    <br>
 
+    <nav>
+        <a href="contact/index.html">Contact</a> </a>
+        <a href="projects/index.html">Projects</a>
+        <a href="index.html">Home</a>
+        <a href="https://github.com/dar0010" target="_blank">My GitHub</a>
+        <a href="CV/index.html">CV</a>
+    </nav>
 </body>
 </html>
