restructured home page and added styling.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
+     <nav>
+        <a href="contact/index.html">Contact</a> </a>
+        <a href="projects/index.html">Projects</a>
+        <a href="index.html", class="current">Home</a>
+        <a href="https://github.com/dar0010" target="_blank">My GitHub</a>
+        <a href="CV/index.html">CV</a>
+    </nav>
+    
     <h1>Daniel Ramirez</h1>
     <p>I am a fourth year probability and statistics major with a minor in data science.
          I like to play tennis and to study math and data science.
@@ -15,14 +23,6 @@
     <img src="images/peppa_pink_small.jpg"
             alt = "My dog Peppa with cherry blossoms in the background"/>
     <p>This is one of my favorite pictures of my dog.</p>
-    <br>
 
-    <nav>
-        <a href="contact/index.html">Contact</a> </a>
-        <a href="projects/index.html">Projects</a>
-        <a href="index.html">Home</a>
-        <a href="https://github.com/dar0010" target="_blank">My GitHub</a>
-        <a href="CV/index.html">CV</a>
-    </nav>
 </body>
 </html>
