--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,7 @@
         <a href="../CV/index.html">CV</a>
     </nav>
     
-    <h1>Projects</h1>
+    <h1>My Projects</h1>
     <div class="projects">
         <article>
             <h2>Lorem ipsum dolor sit.</h2>
