fixed error in cv link to contact page

--- a/CV/index.html
+++ b/CV/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="contact/index.html">Contact</a> </a>
-        <a href="projects/index.html">Projects</a>
+        <a href="../contact/index.html">Contact</a> </a>
+        <a href="../projects/index.html">Projects</a>
         <a href="../index.html">Home</a>
         <a href="https://github.com/dar0010" target="_blank">My GitHub</a>
         <a href="index.html", class="current">CV</a>
