restructured styling and reimplemented features using JS
consolidated page style sheets into a single one for a better, more consistent look across the site. Remade the navigation tab using JS.

--- a/CV/index.html
+++ b/CV/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
-    <link rel="stylesheet" href="style.css" /> 
+    <link rel="stylesheet" href="../style.css" /> 
 </head>
+<script type="module" src="/global.js"></script>
 <body>
-    <nav>
-        <a href="../contact/index.html">Contact</a> </a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../index.html">Home</a>
-        <a href="https://github.com/dar0010" target="_blank">My GitHub</a>
-        <a href="index.html", class="current">CV</a>
-    </nav>
+   
     
     <header>
         <h1>Daniel Ramirez</h1>
@@ -22,11 +17,11 @@
     </header>
     <main>
         <section>
-            <h2>Education</h2>
+            <h2 class="cv-section-title">Education</h2>
             <p>University of California, San Diego</p>
             <p>B.S. in Probability and Statistics, Minor in Data Science</p>
             <p>Expected Graduation: 2025</p>
-            <h3>Relevant Coursework</h3>
+            <h3 class="cv-subheading">Relevant Coursework</h3>
             <ul>
                 <li>Data Structures and Algorithms</li>
                 <li>Data Visualization</li>
@@ -41,7 +36,7 @@
         </section>
 
         <section>
-            <h2>Experience</h2>
+            <h2 class="cv-section-title">Experience</h2>
             <p><strong>Sales Associate</strong> – Finish Line, San Diego, CA</p>
             <p>August 2022 – July 2024</p>
             <ul>
@@ -52,7 +47,7 @@
         </section>
 
         <section>
-            <h2>Skills</h2>
+            <h2 class="cv-section-title">Skills</h2>
             <ul>
                 <li><strong>Programming:</strong> Python (pandas, NumPy, matplotlib), R, SQL, Java</li>
                 <li><strong>Web Development:</strong> HTML, CSS, JavaScript (in progress)</li>
