--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
     <title>Daniel Ramirez: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css" /> 
 </head>
+<script type="module" src="/global.js"></script>
 <body>
-     <nav>
-        <a href="contact/index.html">Contact</a> </a>
-        <a href="projects/index.html">Projects</a>
-        <a href="index.html", class="current">Home</a>
-        <a href="https://github.com/dar0010" target="_blank">My GitHub</a>
-        <a href="CV/index.html">CV</a>
-    </nav>
+     
     
     <h1>Daniel Ramirez</h1>
     <p>I am a fourth year probability and statistics major with a minor in data science.
