--- a/projects/index.html
+++ b/projects/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
 </head>
+<script type="module" src="/global.js"></script>
 <body>
-    <nav>
-        <a href="../contact/index.html">Contact</a> </a>
-        <a href="index.html", class="current">Projects</a>
-        <a href="../index.html">Home</a>
-        <a href="https://github.com/dar0010" target="_blank">My GitHub</a>
-        <a href="../CV/index.html">CV</a>
-    </nav>
+    
     
     <h1>My Projects</h1>
     <div class="projects">
