used relative path to link to JS

--- a/CV/index.html
+++ b/CV/index.html
@@ -6,7 +6,7 @@
     <title>My CV</title>
     <link rel="stylesheet" href="../style.css" /> 
 </head>
-<script type="module" src="/global.js"></script>
+<script type="module" src="../global.js"></script>
 <body>
    
     
