--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="../style.css" />
 </head>
-<script type="module" src="/global.js"></script>
+<script type="module" src="../global.js"></script>
 <body>
     
     
