--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daniel Ramirez: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css" /> 
 </head>
-<script type="module" src="/global.js"></script>
+<script type="module" src="global.js"></script>
 <body>
      
     
