--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" /> 
 </head>
 <script type="module" src="global.js"></script>
+<script src="index.js" type="module" defer></script>
 <body>
      
     
@@ -19,5 +20,13 @@
             alt = "My dog Peppa with cherry blossoms in the background"/>
     <p>This is one of my favorite pictures of my dog.</p>
 
+    <h2>Latest Projects</h2>
+    <div class="projects">
+  <!-- Dynamically added content will appear here -->
+    </div>
+
+    <div id="profile-stats">
+        <h3>My GitHub Stats</h3>
+    </div>
 </body>
 </html>
