--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,14 @@
     </svg>
     <ul class="legend"></ul>
     </div>
+
+    <input
+        class="searchBar"
+        type="search"
+        aria-label="Search projects"
+        placeholder="🔍 Search projects…"
+    />
+
     <div class="projects">
         
     </div>
