--- a/meta/index.html
+++ b/meta/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meta</title>
+    <link rel="stylesheet" href="../style.css" />
 </head>
+<script type="module" src="../global.js"></script>
+<script type="module" src='main.js'></script>
 <body>
     <h1>Meta</h1>
     <p>This page includes stats about the code of this website.</p>
+    <div id="stats"></div>
 </body>
 </html>
