--- a/meta/index.html
+++ b/meta/index.html
@@ -27,5 +27,7 @@
       </dl>
     
       <div id="chart"></div>
+      <p id="selection-count">No commits selected</p>
+      <dl id="language-breakdown" class="stats"></dl>
 </body>
 </html>
