slider works and displays text without input

--- a/meta/index.html
+++ b/meta/index.html
@@ -30,7 +30,7 @@
       <div id="commit-slider-div">
         <label id="commit-slider-label">
           Show Commits until:
-          <input type="range" min="0" max="100">
+          <input id="commit-slider" type="range" min="0" max="100">
           <time id="commit-slider-time"></time>
         </label>
       </div>
